# RUBIUS

./: README.md  package-lock.json  package.json
backend/: .env.example  README.md  ai_service.py  api_response.json  database.py  main.py  models.py  pyproject.toml  requirements.txt  run.sh  schemas.py  test_api.py  test_gemini.py
backend/auth/: auth.py  routes.py
backend/chatbot/: routes.py
backend/worldcup/: routes.py
docs/design/: DESIGN.md  design_system.txt
docs/diagramas_rubius/: v1_diagrama_de_atividade.puml  v1_diagrama_de_casos_de_uso.puml  v1_diagrama_de_classes.puml
frontend/: README.md  games.json  groups.json  index.html  package-lock.json  package.json  tailwind.config.ts  teams.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: rubius.ts  worldcup.ts
frontend/src/auth/: Login.tsx  SignUp.tsx
frontend/src/components/: SidebarLayout.tsx
frontend/src/components/PanelGroup/: PanelGroup.css  PanelGroup.tsx
frontend/src/components/PanelLive/: PanelLive.css  PanelLive.tsx
frontend/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/features/: Chatbot.css  Chatbot.tsx  Dashboard.css  Dashboard.tsx
frontend/src/features/chat/: index.tsx
frontend/src/features/computer-mode/: index.tsx
frontend/src/features/home/: index.tsx
frontend/src/features/login/: index.tsx
frontend/src/features/spaces/: index.tsx
frontend/src/features/worldcup-hub/: index.tsx  types.ts
frontend/src/utils/: scorers.ts  translations.ts
(+4 files in other folders)
