[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncache>=0.1.1",
    "cachetools>=7.1.4",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
]
